# gemviz

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  CHANGES.rst  LICENSE  MANIFEST.in  README.md  api.html  changes.html  env.yml  env010.yml  genindex.html  index.html  install.html  license.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  search.html  searchindex.js  testing.html  testing.md  user_guide.html
.github/workflows/: code.yml  docs.yml  pages.yml  pypi.yml  unit_tests.yml  upload-pypi.yml
PyQt/: Filter GUI Code.py  Filter_Window.ui  filter_function_test_file.py  filter_gui_code.py  test_infomation_database.py  test_ollie.ipynb  test_ollie_2.ipynb
_modules/: index.html
_modules/gemviz/: aboutdialog.html  app.html  bluesky_runs_catalog.html  bluesky_runs_catalog_run_viz.html  bluesky_runs_catalog_search.html  bluesky_runs_catalog_table_model.html  bluesky_runs_catalog_table_view.html  chartview.html  date_time_range_slider.html  licensedialog.html  mainwindow.html  range_slider.html  select_fields_tablemodel.html  select_fields_tableview.html  select_stream_fields.html  tapi.html  tiledserverdialog.html  user_settings.html  utils.html
_sources/: index.rst.txt  license.rst.txt  testing.rst.txt
_sources/api/: app.rst.txt  bluesky_runs_catalog.rst.txt  bluesky_runs_catalog_run_viz.rst.txt  bluesky_runs_catalog_search.rst.txt  date_time_range_slider.rst.txt  select_fields_tablemodel.rst.txt  select_stream_fields.rst.txt  tiledserverdialog.rst.txt
_static/: documentation_options.js
api/: aboutdialog.html  app.html  bluesky_runs_catalog.html  bluesky_runs_catalog_run_viz.html  bluesky_runs_catalog_search.html  bluesky_runs_catalog_table_model.html  bluesky_runs_catalog_table_view.html  chartview.html  date_time_range_slider.html  licensedialog.html  mainwindow.html  range_slider.html  select_fields_tablemodel.html  select_fields_tableview.html  select_stream_fields.html  tapi.html  tiledserverdialog.html  user_settings.html  utils.html
archive/test/: hello.ui  resultswindow.py  test_fanny.py
docs/: requirements.txt
docs/source/: api.rst  changes.rst  conf.py  index.rst  install.rst  testing.rst  user_guide.rst
docs/source/api/: aboutdialog.rst  bluesky_runs_catalog_table_model.rst  bluesky_runs_catalog_table_view.rst  chartview.rst  licensedialog.rst  mainwindow.rst  range_slider.rst  select_fields_tableview.rst  tapi.rst  user_settings.rst  utils.rst
gemviz/: LICENSE  README.md  __init__.py  aboutdialog.py  analyze_run.py  app.py  app_settings.py  bluesky_runs_catalog.py  bluesky_runs_catalog_model.py  bluesky_runs_catalog_run_viz.py  bluesky_runs_catalog_search.py  bluesky_runs_catalog_table.py  bluesky_runs_catalog_table_model.py  bluesky_runs_catalog_table_view.py  bluesky_stream_signals_table_model.py  bluesky_stream_signals_table_view.py  chartview.py  curve_manager.py  date_time_range_slider.py  filterpanel.py  fit_manager.py  fit_models.py  licensedialog.py  mainwindow.py  range_slider.py  resultwindow.py  select_fields_tablemodel.py  select_fields_tableview.py  select_fields_xymon_tablemodel.py  select_fields_xymon_tableview.py  select_stream_fields.py  tapi.py  textwindow.py  tiled_support.py  tiledserverdialog.py  user_settings.py  utils.py  vizpanel.py
gemviz/resources/: bluesky_runs_catalog.ui  bluesky_runs_catalog_run_viz.ui  bluesky_runs_catalog_search.ui  bluesky_runs_catalog_table_view.ui  bluesky_stream_signals_table_view.ui  date_time_range_slider.ui  filterpanel.ui  icons.pptx  licensedialog.ui  mainwindow.ui  select_fields_tableview.ui  select_fields_xymon_tableview.ui  select_stream_fields.ui  textwindow.ui  tiledserverdialog.ui  vizpanel.ui
gemviz/tests/: test_aboutdialog.py  test_app.py  test_chartview.py  test_init.py  test_utils.py
gemviz23/: LICENSE  __init__.py  analyze_run.py  app.py  app_settings.py  filter_function.py  mainwindow.py  result_function.py  resultwindow.py
gemviz23/demo/: __init__.py  aboutdialog.py  analyze_run.py  app.py  app_settings.py  date_time_range_slider.py  filterpanel.py  mainwindow.py  resultwindow.py  textwindow.py  tiledserverdialog.py  utils.py  vizpanel.py
gemviz23/resources/: date_time_range_slider.ui  resultwindow.ui  ~$icons.pptx
gemviz23/test/: dummy_database.py  resultswindow_tablemodel.py  test_fanny_2.ipynb  tiled_client_database_API.py  utils.py
gemviz23/ui_files/: filter_window_version2.ui  result_window.ui  table_window.py
(+10 files in other folders)
